--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -5,5 +5,19 @@
 body {
     * {
         outline: none;
+        ::-webkit-scrollbar { /* For Chrome, Safari, and Opera */
+            width: 1;
+          }
+          
+          ::-moz-scrollbar { /* For Firefox */
+            width: 1;
+          }
+          
+          ::-ms-scrollbar { /* For Internet Explorer and Edge */
+            width: 1;
+          }
+          
+          scrollbar-width: none; /* For Firefox */
+          -ms-overflow-style: none; /* For Internet Explorer and Edge */
     }
 }
